<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">>

        <TextView
            android:id="@+id/NuevoPlato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/NuevoPlato"
            android:textColor="@color/blanco_campos_medium"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:fontFamily="@font/montserrat"
            android:hint="@string/TituloPlato"
            android:padding="8dp"
            android:textColorHint="@color/blanco_campos" />

        <EditText
            android:id="@+id/Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz,._- "
            android:fontFamily="@font/montserrat"
            android:hint="@string/DescripcionPlato"
            android:padding="8dp"
            android:textColorHint="@color/blanco_campos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">>

        <EditText
            android:id="@+id/Precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/PrecioPlato"
            android:inputType="number|numberDecimal"
            android:padding="8dp"
            android:textColorHint="@color/blanco_campos" />

        <EditText
            android:id="@+id/Calorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/CaloriasPlato"
            android:inputType="number"
            android:padding="8dp"
            android:textColorHint="@color/blanco_campos" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GuardarPlato" />
    </LinearLayout>

</LinearLayout>